image link was fix

--- a/index.htm
+++ b/index.htm
@@ -26,13 +26,13 @@
 
     <div class="choices">
         <div class="choice">
-            <img src="/images/p.jpg" alt="window" id="w">
+            <img src="images/p.jpg" alt="window" id="w">
         </div>
         <div class="choice">
-            <img src="/images/o.jpg" alt="chrome" id="c">
+            <img src="images/o.jpg" alt="chrome" id="c">
         </div>
         <div class="choice">
-            <img src="/images/q.png" alt="git" id="g">
+            <img src="images/q.png" alt="git" id="g">
         </div>
     </div>
 
