Nave tags added to index.html  Decorated nav tags in index.css

--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,11 @@
 <body>
     <header>
         <h1>Rock Paper Scissors</h1>
+        <div class="nav-div">
+            <nav class="nav-nav">
+                <span id="home"><a href="#">Home</a></span> <span id="about"><a href="#">About</a></span> <span id="contact"><a href="#">Contact</a></span>
+            </nav>
+        </div>
     </header>
 
     <div class="score-board">
